--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -233,7 +233,7 @@ android:textColorHint="?attr/app_edit_text_color"
                                     android:layout_gravity="center"
                                     android:background="@null"
                                     android:fontFamily="@font/sukhumvittadmai_normal"
-                                    android:hint="@string/password"
+                                    android:hint="@string/create_password"
                                     android:imeOptions="actionDone"
                                     android:inputType="textPassword|textNoSuggestions"
                                     android:singleLine="true"
