toolbar text size changes

--- a/app/src/main/res/layout-sw600dp-land/signup_activity.xml
+++ b/app/src/main/res/layout-sw600dp-land/signup_activity.xml
@@ -140,7 +140,7 @@
                                     android:layout_gravity="center"
                                     android:background="@null"
                                     android:fontFamily="@font/sukhumvittadmai_normal"
-                                    android:hint="@string/full_name"
+                                    android:hint="@string/display_name"
                                     android:imeOptions="actionDone"
                                     android:maxLength="40"
                                     android:singleLine="true"
@@ -188,7 +188,7 @@ android:textColorHint="?attr/app_edit_text_color"
                                     android:layout_gravity="center"
                                     android:background="@null"
                                     android:fontFamily="@font/sukhumvittadmai_normal"
-                                    android:hint="@string/email"
+                                    android:hint="@string/enter_email_address"
                                     android:imeOptions="actionDone"
                                     android:singleLine="true"
                     android:textColor="?attr/app_edit_text_color"
@@ -233,7 +233,7 @@ android:textColorHint="?attr/app_edit_text_color"
                                     android:layout_gravity="center"
                                     android:background="@null"
                                     android:fontFamily="@font/sukhumvittadmai_normal"
-                                    android:hint="@string/password"
+                                    android:hint="@string/create_password"
                                     android:imeOptions="actionDone"
                                     android:inputType="textPassword|textNoSuggestions"
                                     android:singleLine="true"
