--- a/app/src/main/res/layout/toolbar_back.xml
+++ b/app/src/main/res/layout/toolbar_back.xml
@@ -26,17 +26,18 @@
                     android:contentDescription="TODO" />
             </LinearLayout>
             <TextView
+                android:id="@+id/title_toolbar"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/toolbarSearchLeft"
                 android:layout_toRightOf="@+id/back_layout"
                 android:fontFamily="@font/sukhumvittadmai_bold"
-                android:text="Sign In"
+                android:text=""
                 android:textColor="@color/white"
-                android:textSize="18sp"
+                android:textSize="@dimen/headingToolbar"
                 android:layout_centerHorizontal="true"
                 android:layout_centerInParent="true"
-                android:visibility="gone"/>
+                />
 
             <View
                 android:layout_width="match_parent"
