--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -31,12 +31,13 @@
             <ScrollView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fillViewport="true">
+                >
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
+                    android:layout_height="match_parent"
+                    android:orientation="vertical"
+                    >
 
                     <RelativeLayout
                         android:id="@+id/parent_layout"
@@ -211,7 +212,7 @@ android:textColorHint="?attr/app_edit_text_color"
                                 android:visibility="invisible" />
 
 
-                            <LinearLayout
+                            <RelativeLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:orientation="horizontal"
@@ -219,10 +220,12 @@ android:textColorHint="?attr/app_edit_text_color"
                                 android:paddingBottom="@dimen/NontonSize5">
 
                                 <ImageView
+                                    android:id="@+id/lock_icon"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
                                     android:contentDescription="TODO"
-                                    android:padding="@dimen/NontonSize4"
+                                    android:padding="@dimen/NontonSize1"
+                                    android:layout_alignParentLeft="true"
                                     android:src="?attr/lock_icon" />
 
 
@@ -232,6 +235,8 @@ android:textColorHint="?attr/app_edit_text_color"
                                     android:layout_height="wrap_content"
                                     android:layout_gravity="center"
                                     android:background="@null"
+                                    android:layout_marginRight="@dimen/NontonSize30"
+                                    android:layout_marginLeft="@dimen/NontonSize30"
                                     android:fontFamily="@font/sukhumvittadmai_normal"
                                     android:hint="@string/create_password"
                                     android:imeOptions="actionDone"
@@ -240,7 +245,17 @@ android:textColorHint="?attr/app_edit_text_color"
                     android:textColor="?attr/app_edit_text_color"
 android:textColorHint="?attr/app_edit_text_color"
                                     android:textSize="@dimen/TextSize14" />
-                            </LinearLayout>
+
+                                <androidx.appcompat.widget.SwitchCompat
+                                    android:id="@+id/radioPasswordEye"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:background="@null"
+                                    android:layout_alignParentRight="true"
+                                    android:button="?attr/password_toggle"
+                                    android:thumb="@null"
+                                    app:track="@null" />
+                            </RelativeLayout>
                             <View
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/_1sdp"
@@ -255,7 +270,62 @@ android:textColorHint="?attr/app_edit_text_color"
                                 android:textColor="@color/inspection_color"
                                 android:textSize="@dimen/TextSize12"
                                 android:visibility="invisible" />
+                            <RelativeLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal"
+                                android:layout_marginTop="@dimen/NontonSize10"
+                                android:paddingBottom="@dimen/NontonSize5">
 
+                                <ImageView
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:contentDescription="TODO"
+                                    android:padding="@dimen/NontonSize1"
+                                    android:src="?attr/lock_icon"
+                                    android:layout_alignParentLeft="true"/>
+
+
+                                <EditText
+                                    android:id="@+id/etCnfPassword"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:layout_gravity="center"
+                                    android:layout_marginRight="@dimen/NontonSize30"
+                                    android:layout_marginLeft="@dimen/NontonSize30"
+                                    android:background="@null"
+                                    android:fontFamily="@font/sukhumvittadmai_normal"
+                                    android:hint="@string/confirm_password"
+                                    android:imeOptions="actionDone"
+                                    android:inputType="textPassword|textNoSuggestions"
+                                    android:singleLine="true"
+                                    android:textColor="?attr/app_edit_text_color"
+                                    android:textColorHint="?attr/app_edit_text_color"
+                                    android:textSize="@dimen/TextSize14" />
+                                <androidx.appcompat.widget.SwitchCompat
+                                    android:id="@+id/confirmPasswordEye"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:layout_alignParentRight="true"
+                                    android:background="@null"
+                                    android:button="?attr/password_toggle"
+                                    android:thumb="@null"
+                                    app:track="@null" />
+                            </RelativeLayout>
+                            <View
+                                android:layout_width="match_parent"
+                                android:layout_height="@dimen/_1sdp"
+                                android:background="?attr/change_password_bottom_line_color" />
+
+                            <TextView
+                                android:id="@+id/errorCnfPassword"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="left"
+                                android:layout_margin="@dimen/suaErrorTopMargin"
+                                android:textColor="@color/inspection_color"
+                                android:textSize="@dimen/TextSize12"
+                                android:visibility="invisible" />
 
                             <LinearLayout
                                 android:id="@+id/llSignUp"
@@ -274,7 +344,6 @@ android:textColorHint="?attr/app_edit_text_color"
                                     android:contentDescription="TODO"
                                     android:scaleType="fitXY"
                                     android:tint="#FFFFFF"
-                                    android:visibility="gone"
                                     app:srcCompat="@drawable/register1" />
 
                                 <TextView
@@ -291,46 +360,50 @@ android:textColorHint="?attr/app_edit_text_color"
 
                         </LinearLayout>
 
-                        <LinearLayout
 
+
+
+                    </RelativeLayout>
+                    <LinearLayout
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:layout_centerHorizontal="true"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="@dimen/NontonSize30"
+                        android:layout_marginBottom="@dimen/NontonSize20"
+                        android:gravity="center_horizontal|center">
+
+                        <TextView
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_alignParentBottom="true"
-                            android:layout_centerHorizontal="true"
-                            android:gravity="center_horizontal|center">
+                            android:fontFamily="@font/sukhumvittadmai_normal"
+                            android:text="@string/already_have_account_sign"
+                            android:textColor="?attr/already_have_an_account_text"
+                            android:textSize="@dimen/TextSize12"
+                            />
+
+
+                        <FrameLayout
+                            android:id="@+id/tvAlreadyUser"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:paddingTop="@dimen/NontonSize5"
+                            android:paddingRight="@dimen/NontonSize10"
+                            android:paddingBottom="@dimen/NontonSize5">
 
                             <TextView
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
+                                android:layout_marginLeft="@dimen/alreadyUserMargin"
                                 android:fontFamily="@font/sukhumvittadmai_normal"
-                                android:text="@string/already_have_account_sign"
-                                android:textColor="?attr/already_have_an_account_text"
-                                android:textSize="@dimen/TextSize12" />
+                                android:text="@string/sign_in"
+                                android:textColor="@color/description_title_yellow"
+                                android:textSize="@dimen/TextSize14" />
+                        </FrameLayout>
 
-
-                            <FrameLayout
-                                android:id="@+id/tvAlreadyUser"
-                                android:layout_width="wrap_content"
-                                android:layout_height="wrap_content"
-                                android:paddingTop="@dimen/NontonSize5"
-                                android:paddingRight="@dimen/NontonSize10"
-                                android:paddingBottom="@dimen/NontonSize5">
-
-                                <TextView
-                                    android:layout_width="wrap_content"
-                                    android:layout_height="wrap_content"
-                                    android:layout_marginLeft="@dimen/alreadyUserMargin"
-                                    android:fontFamily="@font/sukhumvittadmai_normal"
-                                    android:text="@string/sign_in"
-                                    android:textColor="@color/description_title_yellow"
-                                    android:textSize="@dimen/TextSize14" />
-                            </FrameLayout>
-
-                        </LinearLayout>
-
-
-                    </RelativeLayout>
-
+                    </LinearLayout>
 
                     <LinearLayout
                         android:id="@+id/no_connection_layout"
