--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -125,6 +125,7 @@
     <dimen name="NontonSize18">18dp</dimen>
     <dimen name="NontonSize20">20dp</dimen>
     <dimen name="NontonSize25">25dp</dimen>
+    <dimen name="NontonSize28">28dp</dimen>
     <dimen name="NontonSize30">30dp</dimen>
 
     <dimen name="NontonSize35">35dp</dimen>
