--- a/app/src/main/res/layout/activity_sign_up_third_page.xml
+++ b/app/src/main/res/layout/activity_sign_up_third_page.xml
@@ -184,6 +184,9 @@
                                 android:hint="@string/dob"
                                 android:imeOptions="actionDone"
                                 android:editable="false"
+                                android:clickable="true"
+                                android:focusable="true"
+                                android:enabled="true"
                                 android:singleLine="true"
                                 android:textColor="?attr/app_edit_text_color"
                                 android:textColorHint="?attr/app_edit_text_color"
