profile update wip

--- a/app/src/main/res/layout/spinner_item.xml
+++ b/app/src/main/res/layout/spinner_item.xml
@@ -7,5 +7,6 @@
     android:gravity="left"
     android:textColor="?attr/app_edit_text_color"
     android:padding="5dip"
+    android:textAllCaps="true"
     android:textSize="@dimen/TextSize14"
     />
