signup first page validation done

--- a/app/src/main/res/layout-sw600dp-land/signup_activity.xml
+++ b/app/src/main/res/layout-sw600dp-land/signup_activity.xml
@@ -141,7 +141,7 @@
                                     android:fontFamily="@font/sukhumvittadmai_normal"
                                     android:hint="@string/display_name"
                                     android:imeOptions="actionDone"
-                                    android:maxLength="40"
+                                    android:maxLength="100"
                                     android:singleLine="true"
                     android:textColor="?attr/app_edit_text_color"
 android:textColorHint="?attr/app_edit_text_color"
@@ -332,6 +332,7 @@ android:textColorHint="?attr/app_edit_text_color"
                                 android:layout_gravity="center"
                                 android:layout_marginLeft="@dimen/NontonSize10"
                                 android:layout_marginRight="@dimen/NontonSize10"
+                                android:checked="false"
                                 android:textColor="?attr/app_edit_text_color"
                                 android:fontFamily="@font/sukhumvittadmai_medium"
                                 android:text="I would like to recieve updates from VIPA in future."
@@ -368,6 +369,7 @@ android:textColorHint="?attr/app_edit_text_color"
                             </LinearLayout>
 
                             <LinearLayout
+                                android:visibility="gone"
                                 android:id="@+id/rlFacebookLogin"
                                 android:layout_width="match_parent"
                                 android:layout_height="@dimen/NontonSize45"
