--- a/app/src/main/res/drawable/toast_drawable.xml
+++ b/app/src/main/res/drawable/toast_drawable.xml
@@ -5,7 +5,7 @@
 
     <stroke
         android:width="1dp"
-        android:color="@color/moretitlecolor"
+        android:color="@color/description_title_yellow"
         android:dashWidth="2dp"></stroke>
 
     <padding
