--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -140,7 +140,7 @@
                                 android:fontFamily="@font/sukhumvittadmai_normal"
                                 android:hint="@string/display_name"
                                 android:imeOptions="actionDone"
-                                android:maxLength="40"
+                                android:maxLength="100"
                                 android:singleLine="true"
                                 android:textColor="?attr/app_edit_text_color"
                                 android:textColorHint="?attr/app_edit_text_color"
@@ -339,6 +339,7 @@
                                 android:layout_gravity="center"
                                 android:layout_marginLeft="@dimen/NontonSize10"
                                 android:layout_marginRight="@dimen/NontonSize10"
+                                android:checked="false"
                                 android:textColor="?attr/app_edit_text_color"
                                 android:fontFamily="@font/sukhumvittadmai_normal"
                                 android:text="I would like to recieve updates from VIPA in future."
