--- a/app/src/main/res/layout/profile_activity_new.xml
+++ b/app/src/main/res/layout/profile_activity_new.xml
@@ -27,7 +27,7 @@
                 android:padding="@dimen/rootPadding"
                 android:layout_height="match_parent">
 
-                <LinearLayout
+                <RelativeLayout
                     android:id="@+id/profile_layout"
                     android:layout_width="@dimen/new_more_img_size"
                     android:layout_height="@dimen/new_more_img_size"
@@ -40,9 +40,19 @@
                         android:layout_height="@dimen/new_more_img_size"
                         android:src="@drawable/default_profile_pic"
                         civ_border_color="@color/material_grey_400"
-                        civ_border_width="@dimen/NontonSize1" />
+                        civ_border_width="@dimen/NontonSize1"
+                        />
+                    <ImageView
+                        android:id="@+id/btnPhotoId"
+                        android:layout_width="@dimen/skipProfileMargin"
+                        android:layout_height="@dimen/skipProfileMargin"
+                        android:layout_alignParentBottom="true"
+                        android:layout_alignParentRight="true"
+                        android:contentDescription="TODO"
+                        android:src="@drawable/camera" />
 
-<!--                    <TextView-->
+
+                    <!--                    <TextView-->
 <!--                        android:id="@+id/user_name_words"-->
 <!--                        android:layout_width="wrap_content"-->
 <!--                        android:textSize="@dimen/new_more_img_txt_size"-->
@@ -51,7 +61,7 @@
 <!--                        android:textColor="@color/white"-->
 <!--                        android:layout_height="wrap_content" />-->
 
-                </LinearLayout>
+                </RelativeLayout>
 
                 <LinearLayout
                     android:layout_width="match_parent"
