--- a/app/src/main/res/layout/signup_activity.xml
+++ b/app/src/main/res/layout/signup_activity.xml
@@ -434,7 +434,7 @@
                     </RelativeLayout>
 
                     <LinearLayout
-
+                        android:id="@+id/llFooter"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentBottom="true"
