--- a/app/src/main/res/layout-sw600dp-land/new_password_screen.xml
+++ b/app/src/main/res/layout-sw600dp-land/new_password_screen.xml
@@ -41,7 +41,8 @@
                     android:layout_marginLeft="@dimen/_15sdp"
                     android:layout_marginTop="35dp"
                     android:contentDescription="TODO"
-                    android:src="@drawable/vipalogo512" />
+                    android:src="@drawable/vipalogo512"
+                    android:layout_alignParentLeft="true"/>
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -71,12 +72,12 @@
                             android:fontFamily="@font/sukhumvittadmai_normal"
                             android:hint="@string/new_password"
                             android:inputType="textPassword|textNoSuggestions"
-                            android:maxLength="30"
+                            android:maxLength="20"
                             android:paddingLeft="@dimen/_5sdp"
                             android:paddingRight="@dimen/_5sdp"
                             android:singleLine="true"
-                            android:textColor="?attr/new_password_text_and_hint_color"
-                            android:textColorHint="?attr/new_password_text_and_hint_color"
+                            android:textColor="?attr/app_edit_text_color"
+                            android:textColorHint="?attr/app_edit_text_color"
                             android:textSize="@dimen/TextSize14" />
 
                         <androidx.appcompat.widget.SwitchCompat
@@ -122,11 +123,11 @@
                             android:hint="@string/confirm_password"
                             android:inputType="textPassword|textNoSuggestions"
                             android:lineHeight="@dimen/_30sdp"
-                            android:maxLength="30"
+                            android:maxLength="20"
                             android:paddingLeft="@dimen/_5sdp"
                             android:singleLine="true"
-                            android:textColor="?attr/new_password_text_and_hint_color"
-                            android:textColorHint="?attr/new_password_text_and_hint_color"
+                            android:textColor="?attr/app_edit_text_color"
+                            android:textColorHint="?attr/app_edit_text_color"
                             android:textSize="@dimen/TextSize14" />
 
                         <androidx.appcompat.widget.SwitchCompat
@@ -169,6 +170,7 @@
                         android:lineHeight="@dimen/_35sdp"
                         android:text="@string/change_password"
                         android:textColor="@color/white"
+                        android:textStyle="bold"
                         android:textSize="@dimen/TextSize12" />
 
                 </LinearLayout>
